# libmateui

./: README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: archlinux.sh  builds.sh  builds.yml  debian.sh  fedora.sh  release.yml  ubuntu.sh
examples/: demo-app.c  meson.build
src/: mate-ui-accel.c  mate-ui-accel.h  mate-ui-application.c  mate-ui-application.h  mate-ui-dialogs.c  mate-ui-dialogs.h  mate-ui-menu.c  mate-ui-menu.h  mate-ui-session.c  mate-ui-session.h  mate-ui-settings.c  mate-ui-settings.h  mate-ui-util.c  mate-ui-util.h  mate-ui-window.c  mate-ui-window.h  mate-ui.h  meson.build
